--- a/globals.css
+++ b/globals.css
@@ -18,7 +18,11 @@ header {
   padding: 2rem;
 
   font-weight: 500;
-  text-transform: uppercase;
+
+}
+
+nav {
+  text-align: center; 
 }
 
 header img {
@@ -26,7 +30,7 @@ header img {
   position: absolute;
   top: 1rem;
 
-  z-index: 10;
+  z-index: 99;
 }
 
 ul {
@@ -38,15 +42,12 @@ ul {
   display: flex;
   gap: 2rem
 }
-  
-a {
-  color: white;
-  text-decoration: none;
-}
 
-a:hover {
-  color: #C7FE00;
-  font-weight: 800;
+@media (max-width: 1020px) {
+  header img {
+    position: relative;
+    max-width: 7rem;
 
-  transition: all 0.2s;
+    z-index: 99;
+  }
 }
